# videosamples

./: CMakeLists.txt  README.md
libavmp4encoding/: CMakeLists.txt  main.cpp
